Sun Oct  7 04:50:00 2012  Zachary Scott  <zzak@ruby-lang.org>

	* lib/abbrev.rb: Documentation examples for Abbrev.
	  [ruby-core:47442] [Bug #6985]

Sun Oct  7 04:50:00 2012  Zachary Scott  <zzak@ruby-lang.org>

	* thread.c (rb_thread_aref):
	  Grammar in Thread documentation.
	  Patch by Steve Klabnik [ruby-core:47799] [Bug #7099]

Sun Oct  7 04:37:00 2012  Zachary Scott  <zzak@ruby-lang.org>

	* string.c (rb_str_match):
	  Clarify behavior for captured strings and local variable assignment
	  Patch by Marcus Stollsteimer [ruby-core:47668] [Bug #7062]

Sat Oct  6 18:31:36 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_opts.h (OPT_GLOBAL_METHOD_CACHE): new build option to
	  enable/disable global method caching. [ruby-dev:46203] [Bug #7111]

	* vm_method.c (rb_method_entry_get_with_omod): don't use global
	  method cache if OPT_GLOBAL_METHOD_CACHE is 0.

Sat Oct  6 16:32:04 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_method.c (search_method): check omod only once for performance.

Sat Oct  6 09:42:04 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/encdb.c, enc/utf_16_32.h (ENC_DUMMY_UNICODE): endian-less wide
	  UTF encodings are dummy but Unicode.

	* encoding.c (rb_encdb_set_unicode): set Unicode flag.

	* template/encdb.h.tmpl: allow ENC_DUMMY variants.

	* encoding.c (rb_enc_unicode_p): oniguruma provides Unicode flag.

Fri Oct  5 17:18:42 JST 2012  TAKANO Mitsuhiro  <tak@no32.tk>

	* template/Doxyfile.tmpl: remove SHOW_DIRECTORIES and
	  HTML_ALIGN_MEMBERS lines. They have been obsolete in
	  Doxygen version 1.8.2.

Fri Oct 05 15:26:18 2012  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/objspace.c: add ObjectSpace#reachable_objects_from.
	  This method returns an array of objects referenced by given object.
	  If given object is special objects such as true/false/nil/Fixnum etc
	  then it returns nil. See rdoc for details.
	  [ruby-core:39772]

	* test/objspace/test_objspace.rb: add a test for this method.
