@@ -1027,7 +1027,7 @@ invokesuper
     if (me && me->def->type == VM_METHOD_TYPE_ISEQ &&
 	me->def->body.iseq == ip) {
 	klass = RCLASS_SUPER(klass);
-	me = rb_method_entry_get_with_omod(Qnil, klass, id, &klass);
+	me = rb_method_entry_get_with_refinements(Qnil, klass, id, &klass);
     }
 
     CALL_METHOD(num, blockptr, flag, id, me, recv, klass);
