@@ -1140,7 +1140,7 @@ vm_cref_push(rb_thread_t *th, VALUE klass, int noex, rb_block_t *blockptr)
 {
     rb_control_frame_t *cfp = vm_get_ruby_level_caller_cfp(th, th->cfp);
     NODE *cref = NEW_CREF(klass);
-    cref->nd_omod = Qnil;
+    cref->nd_refinements = Qnil;
     cref->nd_visi = noex;
 
     if (blockptr) {
@@ -1151,7 +1151,7 @@ vm_cref_push(rb_thread_t *th, VALUE klass, int noex, rb_block_t *blockptr)
     }
     /* TODO: why cref->nd_next is 1? */
     if (cref->nd_next && cref->nd_next != (void *) 1 &&
-	!NIL_P(cref->nd_next->nd_omod)) {
+	!NIL_P(cref->nd_next->nd_refinements)) {
 	COPY_CREF_OMOD(cref, cref->nd_next);
     }
 
